# Qbo_A608-Orin-Nx16G_ROS2_JARVIS

./: .gitignore  README.md
ball_tracking_cpp/: CMakeLists.txt  README.md  package.xml
ball_tracking_cpp/src/: red_ball_tracker.cpp
head_tracker_cpp/: CMakeLists.txt  README.md  explain_pid.html  package.xml
head_tracker_cpp/config/: head_tracker.yaml
head_tracker_cpp/launch/: head_tracker.launch.py
head_tracker_cpp/src/: head_tracker_node.cpp
qbo_arduqbo/: dynamixel_hardware_interface.md
qbo_arduqbo/config/: dynamixel_config.yaml
qbo_arduqbo/include/qbo_arduqbo/controllers/: dynamixel_controller.hpp
qbo_arduqbo/src/: qbo_dynamixel.cpp
qbo_arduqbo/src/controllers/: dynamixel_controller.cpp
qbo_camera/: package.xml  readme.md  setup.py
qbo_camera/launch/: invert_image_launch.py
qbo_camera/qbo_camera/: qbo_invert_image.py
qbo_games/: package.xml  setup.py
qbo_games/config/: ball_tracker_config.yaml
qbo_games/launch/: ball_tracker.launch.py
qbo_games/qbo_games/: qbo_ball_tracker.py
qbo_stt/: README.md  package.xml  setup.cfg  setup.py  stt_node.py
qbo_stt/config/: params.yaml
qbo_stt/launch/: qbo_stt_launch.py  stt.launch.py
qbo_stt/models/engine/: placer_ici_encoder_engine_decoder_joint_engine_vocab.txt
qbo_stt/qbo_stt/: qbo_stt.py  qbo_stt_faster_whisper.py  qbo_stt_riva.py  readme.md  riva_install.txt
qbo_stt/stt_model/sherpa_models/: readme.txt
qbo_stt/stt_model/silero_models/: model_uint8.onnx  readme.txt
qbo_tts/: CMakeLists.txt  README.md  package.xml  readme.md  setup.cfg  setup.py
qbo_tts/config/: tts.yaml
qbo_tts/launch/: qbo_tts_launch.py
qbo_tts/qbo_tts/: qbo_tts.py  qbo_tts_old_working_node.py
qbo_tts/src/: qbo_tts_node.cpp
qbo_tts/tts_model/: axel.onnx.json
rplidar_ros/: README.md
rplidar_ros/launch/: view_rplidar_a2m8_launch.py
rplidar_ros/rviz/: rplidar_ros.rviz
rplidar_ros/scripts/: rplidar.rules
