<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_stt</name>
  <version>1.0.0</version>
  <description>
    Speech-To-Text node pour le robot Néo.
    NVIDIA Parakeet TDT 0.6B v3 — TensorRT FP16 — Silero VAD.
    Inference 100% TensorRT, zéro ONNX Runtime, modèle Engine.
  </description>
  <maintainer email="elpimous12@gmail.com">Vincent Foucault</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
