<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qbo_tts</name>
  <version>0.1.0</version>
  <description>Minimal TTS node with Sherpa-ONNX + Piper (CUDA + PortAudio) using ROS2 parameters</description>
  <maintainer email="elpimous12@gmail.com">Ton Nom</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>